<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Contato">

    <Toolbar
        android:id="@+id/toolbar_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:title="@string/title_toolbar"
        android:titleTextColor="@color/white"
        android:navigationIcon="@drawable/ic_voltar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/ic_celular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_phone"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_contato"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_celular"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_contato"
        app:layout_constraintStart_toEndOf="@+id/ic_celular"
        />

    <ImageView
        android:id="@+id/ic_email"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_email"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/ic_celular"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/ic_celular"
        app:layout_constraintStart_toEndOf="@+id/ic_email"
        />

    <ImageView
        android:id="@+id/btn_whatsapp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo_whatsapp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>