<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Projetos">

    <Toolbar
        android:id="@+id/toolbar_projetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:title="@string/title_toolbar_projetos"
        android:titleTextColor="@color/white"
        android:navigationIcon="@drawable/ic_voltar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/img_projeto1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/projeto_barbearia"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_projetos"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_projeto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_barbearia"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_projetos"
        app:layout_constraintStart_toEndOf="@+id/img_projeto1"
        />

    <Button
        android:id="@+id/btn_barbearia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_detahes_projetos"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/red"
        android:layout_margin="20dp"
        app:cornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@id/txt_projeto1"
        app:layout_constraintStart_toEndOf="@+id/img_projeto1"
        />

    <ImageView
        android:id="@+id/img_projeto2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/projeto_pizzaria"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/img_projeto1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_projeto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Pizzaria"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_barbearia"
        app:layout_constraintStart_toEndOf="@+id/img_projeto2"
        />

    <Button
        android:id="@+id/btn_pizzaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_detahes_projetos"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/red"
        android:layout_margin="20dp"
        app:cornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@id/txt_projeto2"
        app:layout_constraintStart_toEndOf="@+id/img_projeto2"
        />

    <ImageView
        android:id="@+id/img_projeto3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/projeto_marcenaria"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/img_projeto2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_projeto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Marcenaria"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_pizzaria"
        app:layout_constraintStart_toEndOf="@+id/img_projeto3"
        />

    <Button
        android:id="@+id/btn_marcenaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_detahes_projetos"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/red"
        android:layout_margin="20dp"
        app:cornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@id/txt_projeto3"
        app:layout_constraintStart_toEndOf="@+id/img_projeto3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>